--- a/node/bismuthsdk/package.json
+++ b/node/bismuthsdk/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
+    "test": "jest",
     "prepublishOnly": "npm run build",
     "prepare": "npm run build"
   },
@@ -19,11 +20,15 @@
     "simple-git": "^3.27.0"
   },
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
+    "@types/jest": "^29.5.7",
     "@types/axios": "^0.14.0",
     "@types/node": "^20.3.1",
     "@typescript-eslint/eslint-plugin": "^8.18.0",
     "@typescript-eslint/parser": "^8.18.0",
     "eslint": "^9.17.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1"
   }
 }
