--- a/.github/workflows/test-python.yaml
+++ b/.github/workflows/test-python.yaml
@@ -53,12 +53,8 @@ jobs:
       - name: Create HTML coverage report
         if: always()
         run: |
-          hatch -e hatch-test.py3.10 coverage html
-
-      - name: Zip HTML coverage report
-        if: always()
-        run: |
-          tar -czf python/htmlcov.tar.gz python/htmlcov
+          hatch -e hatch-test.py3.10 run coverage html
+          tar -czf htmlcov.tar.gz htmlcov
 
       - name: Upload coverage report
         if: always()
